prevents Bootstrap row class horizontal scrolling within dhtmlx layout

--- a/vmdb/app/assets/stylesheets/patternfly_overrides.less
+++ b/vmdb/app/assets/stylesheets/patternfly_overrides.less
@@ -175,6 +175,11 @@ li.brand-white-label.whitelabeled {
   border-right: 0;
 }
 
+/* prevents Bootstrap row class horizontal scrolling within dhtmlx layout  */
+.dhtmlxLayoutSinglePoly .row {
+  margin-right: 0;
+}
+
 #custom_left_cell_div h4.panel-title {
   font-size: 12px !important
 }
